# flight_controller

./: .CMakeLists.txt.swp  .gitmodules  CMakeLists.txt  README.md  package.xml
config/: pid_Bicopter.yaml  pid_Bicopter2.yaml  pid_Bicopter_3D.yaml  pid_Quad.yaml  pid_Quad_Load.yaml  pid_Quad_cascade.yaml  pid_Quad_minsnap.yaml  pid_Quadtilt.yaml  pid_bicopter_through.yaml  pid_miniBi.yaml  pid_tailsitter.yaml
launch/: bicopter_through.launch  fly_quad_minsnap.launch  fly_quad_minsnap_remote.launch  test_controller.launch  tracking_controller_SIL.launch
rviz/: minsnap_rviz.rviz  through_rviz.rviz
scripts/: uav_kf.py
src/: autoflip_controller.cpp  autoflip_controller_cascade.cpp  autoflip_controller_for_quad.cpp  autoflip_controller_forbidFlip.cpp  autoflip_controller_v1.cpp  bicopter_optitrack_controller.cpp  bicopter_through.cpp  bode_attitude_test.cpp  cs_controller.cpp  flycontroller_minsnap.cpp  pullerBi_controller.cpp  pusherBi_controller.cpp  quadtilt_controller.cpp  tailsitter_controller.cpp  tailsitter_controller_new.cpp  tracking_controller_SIL.cpp  uav_kf.py
src/GNC2022/: lwj_controller.cpp  lyf_controller.cpp  yjr_controller.cpp  zyz_controller.cpp
trajectories/: drone_trajectory.csv
